--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "exboost",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/exboost.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "node scripts/replaceVersion.js",
     "build": "tsc"
   },
