--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
   "name": "exboost",
   "version": "1.2.0",
-  "description": "",
+  "description": "Package for adding promotional banners to your extensions with ExBoost",
   "main": "dist/exboost.js",
   "scripts": {
     "postbuild": "node scripts/replaceVersion.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest",
+    "prepublishOnly": "npm test && npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/classvsoftware/exboost.js.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "web",
+    "enhancement",
+    "utility",
+    "extension",
+    "chrome"
+  ],
+  "author": "Matt Frisbie <classvsoftware@gmail.com> (https://extensionboost.com)",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/classvsoftware/exboost.js/issues"
   },
-  "homepage": "https://github.com/classvsoftware/exboost.js#readme",
+  "homepage": "https://extensionboost.com",
   "devDependencies": {
     "@types/chrome": "^0.0.260",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
 }
