change npm package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exboost",
+  "name": "exboost-js",
   "version": "1.3.0",
   "description": "Package for adding promotional banners to your extensions with ExBoost",
   "main": "dist/exboost.js",
