--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "exboost-js",
   "version": "1.9.0",
   "description": "Package for adding promotional banners to your extensions with ExBoost",
-  "main": "dist/exboost.js",
+  "main": "dist/exboost.cjs",
   "scripts": {
     "postbuild": "node scripts/replaceVersion.js",
-    "build": "tsc",
+    "build": "webpack",
     "test": "jest",
     "prepublishOnly": "npm test && npm run build"
   },
@@ -32,6 +32,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.2",
+    "webpack-cli": "^5.1.4"
   }
 }
