--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
     "typescript": "^5.3.3",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "files": [
+    "dist/",
+    "src/",
+    "LICENSE",
+    "README.md"
+  ]
 }
